@@ -13,12 +13,11 @@ import com.codecool.model.tags.TagCategory;
 import com.codecool.repository.EventRepository;
 import com.codecool.repository.TagCategoryRepository;
 import com.codecool.repository.TagRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.Collection;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -38,13 +37,14 @@ public class EventService {
 
     }
 
-    private List<Tag> getTagSet(Collection<TaginEventDTO> taginEventDTOS) {
-        return taginEventDTOS.stream().map(tagMapper::tagInEventDTOsToTag).toList();
-    }
 
     public EventDTO getEventById(long id) {
         Event event = eventRepository.findEventById(id);
-        return eventMapper.eventToEventDTO(event);
+        List<TaginEventDTO> tags = event.getTags().stream().map(tagMapper::tagToTaginEventDTO).collect(Collectors.toList());
+        EventDTO eventDTO = new EventDTO(event.getId(), event.getDate(), event.getName(), event.getDescription(), new LocationInEventDTO(event.getLocation().getId(), event.getLocation().getName()),
+                null, event.getOwner(), event.getSize(), tags, event.getStatus());
+
+        return eventDTO;
 
     }
 
@@ -64,23 +64,25 @@ public class EventService {
 
     public List<EventDTO> getAllEvents() {
         List<Event> events = eventRepository.findAll();
-        return events.stream()
-                .map(eventMapper::eventToEventDTO)
-                .toList();
-
+        List<EventDTO> eventDTOS = events.stream().map(event -> getEventById(event.getId())).collect(Collectors.toList());
+        return eventDTOS;
     }
 
     public boolean deleteEventById(long id) {
         return eventRepository.deleteEventById(id);
     }
 
+
+
+    @Transactional
     public boolean addTagToEvent(long eventId, TaginEventDTO taginEventDTO) {
         Event event = eventRepository.findEventById(eventId);
         TagCategory tagCategory = tagCategoryRepository.findById(taginEventDTO.categoryId());
-        Tag tag = new Tag(taginEventDTO.id(), taginEventDTO.name(), tagCategory, null);
+        Tag tag = new Tag(taginEventDTO.id(), taginEventDTO.name(), tagCategory);
         event.addTag(tag);
         return eventRepository.save(event).getId() > 0;
     }
+
 
     private LocationInEventDTO getLocationDTOForEvent(Location location) {
         return new LocationInEventDTO(location.getId(), location.getName());
@@ -88,8 +90,8 @@ public class EventService {
 
     public boolean deleteTagFromEvent(long eventId, long tagId) {
         Event event = eventRepository.findEventById(eventId);
-        Set<Tag> tags = event.getTags();
-        Set<Tag> updatedTags = tags.stream().filter(tag -> tag.getId() != tagId).collect(Collectors.toSet());
+        List<Tag> tags = event.getTags();
+        List<Tag> updatedTags = tags.stream().filter(tag -> tag.getId() != tagId).collect(Collectors.toList());
 
         event.setTags(updatedTags);
         return eventRepository.save(event).getId() > 0;
